--- a/ShiftIndicator/res/values/strings.xml
+++ b/ShiftIndicator/res/values/strings.xml
@@ -8,4 +8,11 @@
 	<string name="engine_speed">RPM:</string>
 	<string name="pedal_position">Pedal %:</string>
 	<string name="button_text">Send Signal</string>
+	
+	<string name="pref_datatype_title">Data Type</string>
+	<string name="pref_trace_key">use_trace_file</string>
+	<string name="pref_trace_title">Use Trace File</string>
+	<string name="pref_trace_summary">Do you want to use a trace file?</string>
+	
+	<string name="pref_operation_title">Feedback Options</string>
 </resources>
