--- a/ShiftIndicator/res/values/strings.xml
+++ b/ShiftIndicator/res/values/strings.xml
@@ -9,10 +9,20 @@
 	<string name="pedal_position">Pedal %:</string>
 	<string name="button_text">Send Signal</string>
 	
-	<string name="pref_datatype_title">Data Type</string>
-	<string name="pref_trace_key">use_trace_file</string>
-	<string name="pref_trace_title">Use Trace File</string>
-	<string name="pref_trace_summary">Do you want to use a trace file?</string>
-	
 	<string name="pref_operation_title">Feedback Options</string>
+	<string name="pref_datasource_title">Data Options</string>
+	<string name="pref_data_title">Use a Trace File</string>
+	<string name="pref_data_summary">Does not require a Vehicle Interface</string>
+	<string name="pref_haptic_title">Vibration</string>
+	<string name="pref_audio_title">Audible Tone</string>
+	<string name="pref_operation_summary">Select the desired functionality</string>
+	<string name="pref_mode_title">Select Performance Mode</string>
+	<string name="pref_power_title">Driving Coach</string>
+	<string name="settingsTitle">Settings</string>
+	<string name="exitTitle">Close</string>
+	
+	<string name="pref_mode_off">Performance</string>
+	<string name="pref_mode_on">Fuel Economy</string>
+	<string name="pref_mode_summary">Fuel Economy/Performance Mode</string>
+	
 </resources>
