--- a/ShiftIndicator/res/values/strings.xml
+++ b/ShiftIndicator/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ShiftIndicator</string>
+    <string name="app_name">Shift Indicator</string>
     <string name="indicator">Shift Indicator</string>
     <string name="menu_settings">Settings</string>
 	<string name="vehicle_speed">Speed:</string>
@@ -9,18 +9,23 @@
 	<string name="pedal_position">Pedal %:</string>
 	<string name="button_text">Send Signal</string>
 	
-	<string name="pref_operation_title">Feedback Options</string>
+	<string name="pref_operation_title">Shift Indicator Options</string>
+	
+	<string name="pref_calculation_title">Calculation Method</string>
+	<string name="pref_calculation_summary">Use CAN signals or calculate locally</string>
+	<string name="pref_calculation_off">CAN Signals</string>
+	<string name="pref_calculation_on">Calculate</string>
+	
 	<string name="pref_haptic_title">Vibration</string>
 	<string name="pref_audio_title">Audible Tone</string>
 	<string name="pref_visual_title">Visual Signal</string>
-	<string name="pref_operation_summary">Select the desired functionality</string>
-	<string name="pref_mode_title">Select Performance Mode</string>
 	<string name="power_title">Driving Coach</string>
 	<string name="settingsTitle">Settings</string>
 	<string name="exitTitle">Close</string>
 	
+	<string name="pref_mode_title">Select Coaching Mode</string>
 	<string name="pref_mode_off">Performance</string>
 	<string name="pref_mode_on">Fuel Economy</string>
-	<string name="pref_mode_summary">Fuel Economy/Performance Mode</string>
+	<string name="pref_mode_summary">Fuel Economy/Performance</string>
 
 </resources>
